[package]
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"
name = "negative-selection"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
csv = "1.1.3"
derive_builder = "0.9.0"
kdtree = "0.6.0"
ndarray = {version = "0.13.1", features = ["serde"]}
ndarray-rand = "0.11.0"
plotters = "0.2.15"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.57"
